--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>30 мар:  <DD><a href="/catalog/cat28.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены (РАСПРОДАЖА):&#xa;Диски алмазные сплошные для мокрой резки&#xa;BERGEN, HAGWERT, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> (мокрый рез)</span></a><br>
+  <DT>29 мар:  <DD><a href="/catalog/cat281.shtml" title="Цены снижены:&#xa;Коронки BIMETAL и хвостовики для них"><span class="title">Коронки</span><span class="dop"> BIMETAL</span></a><br>
   <DT>16 мар:  <DD><a href="/catalog/cat128.shtml" title="Новые товары:&#xa;Ножовки по сырой древесине REMOQUICK&#xa;крупный зуб, 400 и 500 мм"><span class="title">Ножовки по сырой древесине</span><span class="dop"></span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat245.shtml" title="Новый товар:&#xa;Электроудлинитель силовой универсальный&#xa;30 м на пластиковой катушке,&#xa;3.5 кВт (16 А), термоустойчивый ПВС 3 &#215; 2.5 кв.мм ГОСТ,&#xa;4 розетки  с заземлением, IP44"><span class="title">Удлинитель 30 м 4 роз. 16 А</span><span class="dop"></span></a><br>
   <DT>02 мар:  <DD><a href="/catalog/cat514.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Миксеры (насадки на миксер) универсальные"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
@@ -9,10 +11,6 @@
   <DT>24 фев:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a> и <a href="/catalog/cat194.shtml" title="Цена снижена:&#xa;Очиститель для монтажной пены ULTIMA"><span class="title">очиститель</span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat163.shtml" title="Цены снижены"><span class="title">Строительные ведра</span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat512.shtml" title="Цены снижены:&#xa;Кельмы бетонщика, печника, штукатура"><span class="title">Кельмы</span><span class="dop"> HOBBI</span></a><br>
-  <DT>18 фев:  <DD><a href="/catalog/cat100.shtml" title="Снижены цены значительной части товарных групп"><span class="title">Производственный инвентарь</span><span class="dop"></span></a><br>
-  <DT>17 фев:  <DD><a href="/catalog/cat85.shtml"  title="Снижены цены большинства товаров"><span class="title">Средства защиты</span><span class="dop"></span></a><br>
-  <DT>08 фев:  <DD><a href="/catalog/cat231.shtml" title="Новый товар:&#xa;Карандаш малярный Ultima&#xa;180 мм, уп. 12 шт."><span class="title">Карандаш малярный</span><span class="dop"> ULTIMA</span></a><br>
-  <DT>01 фев:  <DD><a href="/catalog/cat191.shtml" title="Новые товары:&#xa;Пистолет для монтажной пены Ultima Lite;&#xa;Профессиональный пистолет для монтажной пены&#xa;    SILA Pro с тефлоновым покрытием"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
