--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>18 фев:  <DD><a href="/catalog/cat100.shtml" title="Снижены цены значительной части товарных групп"><span class="title">Производственный инвентарь</span><span class="dop"></span></a><br>
+  <DT>17 фев:  <DD><a href="/catalog/cat85.shtml"  title="Снижены цены большинства товаров"><span class="title">Средства защиты</span><span class="dop"></span></a><br>
+  <DT>08 фев:  <DD><a href="/catalog/cat231.shtml" title="Новый товар:&#xa;Карандаш малярный Ultima&#xa;180 мм, уп. 12 шт."><span class="title">Карандаш малярный</span><span class="dop"> ULTIMA</span></a><br>
+  <DT>01 фев:  <DD><a href="/catalog/cat191.shtml" title="Новые товары:&#xa;Пистолет для монтажной пены Ultima Lite;&#xa;Профессиональный пистолет для монтажной пены&#xa;    SILA Pro с тефлоновым покрытием"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
   <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
   <DT>12 янв:  <DD><a href="/catalog/cat55.shtml"  title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Гаечные ключи</span><span class="dop"></span></a><br>
   <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
