--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>24 фев:  <DD><a href="/catalog/cat163.shtml" title="Цены снижены"><span class="title">Строительные ведра</span></a><br>
+  <DT>24 фев:  <DD><a href="/catalog/cat512.shtml" title="Цены снижены:&#xa;Кельмы бетонщика, печника, штукатура"><span class="title">Кельмы</span><span class="dop"> HOBBI</span></a><br>
   <DT>18 фев:  <DD><a href="/catalog/cat100.shtml" title="Снижены цены значительной части товарных групп"><span class="title">Производственный инвентарь</span><span class="dop"></span></a><br>
   <DT>17 фев:  <DD><a href="/catalog/cat85.shtml"  title="Снижены цены большинства товаров"><span class="title">Средства защиты</span><span class="dop"></span></a><br>
   <DT>08 фев:  <DD><a href="/catalog/cat231.shtml" title="Новый товар:&#xa;Карандаш малярный Ultima&#xa;180 мм, уп. 12 шт."><span class="title">Карандаш малярный</span><span class="dop"> ULTIMA</span></a><br>
