--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,16 +1,16 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 апр:  <DD><a href="/catalog/cat184.shtml" title="Новые товары:&#xa;Круги отрезные по металлу (BERGEN)"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
+  <DT>31 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
   <DT>30 мар:  <DD><a href="/catalog/cat28.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены (РАСПРОДАЖА):&#xa;Диски алмазные сплошные для мокрой резки&#xa;BERGEN, HAGWERT, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> (мокрый рез)</span></a><br>
   <DT>29 мар:  <DD><a href="/catalog/cat281.shtml" title="Цены снижены:&#xa;Коронки BIMETAL и хвостовики для них"><span class="title">Коронки</span><span class="dop"> BIMETAL</span></a><br>
   <DT>16 мар:  <DD><a href="/catalog/cat128.shtml" title="Новые товары:&#xa;Ножовки по сырой древесине REMOQUICK&#xa;крупный зуб, 400 и 500 мм"><span class="title">Ножовки по сырой древесине</span><span class="dop"></span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat245.shtml" title="Новый товар:&#xa;Электроудлинитель силовой универсальный&#xa;30 м на пластиковой катушке,&#xa;3.5 кВт (16 А), термоустойчивый ПВС 3 &#215; 2.5 кв.мм ГОСТ,&#xa;4 розетки  с заземлением, IP44"><span class="title">Удлинитель 30 м 4 роз. 16 А</span><span class="dop"></span></a><br>
   <DT>02 мар:  <DD><a href="/catalog/cat514.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Миксеры (насадки на миксер) универсальные"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
   <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Расширен ассортимент:&#xa;новые свёрла стеклу, керамике и керамограниту&#xa;РОСОМАХА Quadro, 4 режущие грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
-  <DT>25 фев:  <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
+  <DT>25 фев:  <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat301.shtml" title="Цены снижены"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a> и <a href="/catalog/cat194.shtml" title="Цена снижена:&#xa;Очиститель для монтажной пены ULTIMA"><span class="title">очиститель</span></a><br>
-  <DT>24 фев:  <DD><a href="/catalog/cat163.shtml" title="Цены снижены"><span class="title">Строительные ведра</span></a><br>
-  <DT>24 фев:  <DD><a href="/catalog/cat512.shtml" title="Цены снижены:&#xa;Кельмы бетонщика, печника, штукатура"><span class="title">Кельмы</span><span class="dop"> HOBBI</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
