--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 июн:  <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент:&#xa;новый валик `Нейлон` 100 мм, ворс 12 мм, D 15 мм, с рукояткой 6 мм"><span class="title">Малярные валики</span><span class="dop"> "Нейлон"</span></a><br>
   <DT>01 апр:  <DD><a href="/catalog/cat184.shtml" title="Новые товары:&#xa;Круги отрезные по металлу (BERGEN)"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
   <DT>31 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
   <DT>30 мар:  <DD><a href="/catalog/cat28.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены (РАСПРОДАЖА):&#xa;Диски алмазные сплошные для мокрой резки&#xa;BERGEN, HAGWERT, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> (мокрый рез)</span></a><br>
