--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,13 +1,13 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>22 ноя:  <DD><a href="/catalog/cat295.shtml" title="Цены снижены:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл.&#xa;Разные цвета"><span class="title">Аэрозольные краски</span><span class="dop"> ULTIMA</span></a><br>
+  <DT>22 ноя:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>10 сен:  <DD><a href="/catalog/cat176.shtml" title="Цены снижены:&#xa;Силикон строительный универсальный ULTIMA, 280 мл;&#xa;Силикон санитарный универсальный ULTIMA, 280 мл.&#xa;Цвета: белый, бесцветный"><span class="title">Силикон</span><span class="dop"> ULTIMA, 280 мл</span></a><br>
   <DT>09 сен:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор технический KN95 с клапаном"><span class="title">Респиратор технический</span><span class="dop"> KN95</span></a><br>
   <DT>08 сен:  <DD><a href="/catalog/cat86.shtml"  title="Цена снижена: Перчатки Х/Б с двойным   латексным покрытием ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
-  <DT>02 сен:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span></a><br>
   <DT>01 сен:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
   <DT>15 июн:  <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент:&#xa;новый валик `Нейлон` 100 мм, ворс 12 мм, D 15 мм, с рукояткой 6 мм"><span class="title">Малярные валики</span><span class="dop"> "Нейлон"</span></a><br>
-  <DT>01 апр:  <DD><a href="/catalog/cat184.shtml" title="Новые товары:&#xa;Круги отрезные по металлу (BERGEN)"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
   <DT>31 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
   <DT>30 мар:  <DD><a href="/catalog/cat28.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены (РАСПРОДАЖА):&#xa;Диски алмазные сплошные для мокрой резки&#xa;BERGEN, HAGWERT, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> (мокрый рез)</span></a><br>
   <DT>29 мар:  <DD><a href="/catalog/cat281.shtml" title="Цены снижены:&#xa;Коронки BIMETAL и хвостовики для них"><span class="title">Коронки</span><span class="dop"> BIMETAL</span></a><br>
