14 nov -> crash -> jan

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>02 сен:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span></a><br>
+  <DT>31 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
   <DT>01 апр:  <DD><a href="/catalog/cat184.shtml" title="Новые товары:&#xa;Круги отрезные по металлу (BERGEN)"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
   <DT>16 мар:  <DD><a href="/catalog/cat128.shtml" title="Новые товары:&#xa;Ножовки по сырой древесине REMOQUICK&#xa;крупный зуб, 400 и 500 мм"><span class="title">Ножовки по сырой древесине</span><span class="dop"></span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat245.shtml" title="Новый товар:&#xa;Электроудлинитель силовой универсальный&#xa;30 м на пластиковой катушке,&#xa;3.5 кВт (16 А), термоустойчивый ПВС 3 &#215; 2.5 кв.мм ГОСТ,&#xa;4 розетки  с заземлением, IP44"><span class="title">Удлинитель 30 м 4 роз. 16 А</span><span class="dop"></span></a><br>
