Some files till IdeaIC2020.3

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,16 +1,18 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 фев:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
+  <DT>08 фев:  <DD><a href="/catalog/cat172.shtml" title="Расширен ассортимент:&#xa;Коронки по бетону алмазные в сборе, с хвостовиком SDS+"><span class="title">Коронки по бетону алмазные</span><span class="dop"></span></a><br>
+  <DT>07 фев:  <DD><a href="/catalog/cat281.shtml" title="Новые товары: Коронки HSS BIMETAL, РОСОМАХА&#xa;Цены снижены: Хвостовики (держатели) для коронок BIMETAL, HARDAX"><span class="title">Коронки BIMETAL и хвостовики</span><span class="dop"></span></a><br>
+  <DT>04 фев:  <DD><a href="/catalog/cat18.shtml"  title="Цены снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
+  <DT>03 фев:  <DD><a href="/catalog/cat189.shtml" title="Новый товар:&#xa;Чашка алмазная зачистная двухрядная 125 мм РОСОМАХА"><span class="title">Чашка алмазная зачистная</span><span class="dop"></span></a><br>
+  <DT>02 фев:  <DD><a href="/catalog/cat410.shtml" title="Новые товары:&#xa;Свёрла по металлу ступенчатые (шаговые) РОСОМАХА,&#xa;4 - 40 мм, 5 - 19 ступеней"><span class="title">Свёрла</span><span class="dop"> ступенчатые</span></a><br>
+  <DT>01 фев:  <DD><a href="/catalog/cat545.shtml" title="Цены снижены и расширен ассортимент:&#xa;Круги абразивные самозакрепляющиеся без отверстий РОСОМАХА"><span class="title">Круги абразивные</span><span class="dop"> "самолипы"</span></a><br>
+  <DT>31 янв:  <DD><a href="/catalog/cat188.shtml" title="Новые товары:&#xa;Степлер ручной металлический РОСОМАХА ПРОФИ&#xa;Скобы для степлера калёные, тип 53"><span class="title">Степлер мебельный и скобы</span><span class="dop"></span></a><br>
   <DT>29 ноя:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор У-2К (зеленый)"><span class="title">Респиратор</span><span class="dop"> У-2К</span></a><br>
   <DT>22 ноя:  <DD><a href="/catalog/cat295.shtml" title="Цены снижены:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл.&#xa;Разные цвета"><span class="title">Аэрозольные краски</span><span class="dop"> ULTIMA</span></a><br>
-  <DT>22 ноя:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>21 ноя:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>10 сен:  <DD><a href="/catalog/cat176.shtml" title="Цены снижены:&#xa;Силикон строительный универсальный ULTIMA, 280 мл;&#xa;Силикон санитарный универсальный ULTIMA, 280 мл.&#xa;Цвета: белый, бесцветный"><span class="title">Силикон</span><span class="dop"> ULTIMA, 280 мл</span></a><br>
-  <DT>09 сен:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор технический KN95 с клапаном"><span class="title">Респиратор технический</span><span class="dop"> KN95</span></a><br>
   <DT>08 сен:  <DD><a href="/catalog/cat86.shtml"  title="Цена снижена: Перчатки Х/Б с двойным   латексным покрытием ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
-  <DT>01 сен:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a><br>
-  <DT>31 авг : <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
-  <DT>15 июн:  <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент:&#xa;новый валик `Нейлон` 100 мм, ворс 12 мм, D 15 мм, с рукояткой 6 мм"><span class="title">Малярные валики</span><span class="dop"> "Нейлон"</span></a><br>
-  <DT>30 мар:  <DD><a href="/catalog/cat28.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены (РАСПРОДАЖА):&#xa;Диски алмазные сплошные для мокрой резки&#xa;BERGEN, HAGWERT, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> (мокрый рез)</span></a><br>
-  <DT>29 мар:  <DD><a href="/catalog/cat281.shtml" title="Цены снижены:&#xa;Коронки BIMETAL и хвостовики для них"><span class="title">Коронки</span><span class="dop"> BIMETAL</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
