War many 2 + 2 + ask prices + 2 prices

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,14 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>11 апр:  <DD><a href="/catalog/cat47.shtml"  title="Новые товары:&#xa;Буры по бетону для перфоратора SDS plus RennBohr Duo"><span class="title">Буры SDS+</span><span class="dop"> RennBohr Duo</span></a><br>
+  <DT>02 мар:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"></span></a><br>
+  <DT>01 мар:  <DD><a href="/catalog/cat155.shtml" title="Цены снижены"><span class="title">Гладилки штукатурные</span><span class="dop"></span></a><br>
+  <DT>25 фев:  <DD><a href="/catalog/cat149.shtml" title="Цены снижены"><span class="title">Кисти круглые</span><span class="dop"></span></a><br>
+  <DT>24 фев:  <DD><a href="/catalog/cat83.shtml"  title="Цены снижены"><span class="title">Ключи разводные</span><span class="dop"></span></a><br>
+  <DT>22 фев:  <DD><a href="/catalog/cat588.shtml" title="Цены снижены"><span class="title">Скотч лента малярная</span><span class="dop"></span></a><br>
+  <DT>21 фев:  <DD><a href="/catalog/cat72.shtml"  title="Цены снижены"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
+  <DT>15 фев:  <DD><a href="/catalog/cat562.shtml" title="Цены снижены"><span class="title">Замки навесные</span><span class="dop"></span></a><br>
+  <DT>14 фев:  <DD><a href="/catalog/cat33.shtml"  title="Цены снижены: Гайки оцинкованные ГОСТ 5915-70"><span class="title">Гайки</span><span class="dop"></span></a> и <a href="/catalog/cat34.shtml"  title="Цены снижены: Шайбы плоские ГОСТ 11371-70 и увеличеннне ГОСТ 6958-70"><span class="title">шайбы</span><span class="dop"></span></a><br>
   <DT>12 фев:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
   <DT>08 фев:  <DD><a href="/catalog/cat172.shtml" title="Расширен ассортимент:&#xa;Коронки по бетону алмазные в сборе, с хвостовиком SDS+"><span class="title">Коронки по бетону алмазные</span><span class="dop"></span></a><br>
   <DT>07 фев:  <DD><a href="/catalog/cat281.shtml" title="Новые товары: Коронки HSS BIMETAL, РОСОМАХА&#xa;Цены снижены: Хвостовики (держатели) для коронок BIMETAL, HARDAX"><span class="title">Коронки BIMETAL и хвостовики</span><span class="dop"></span></a><br>
@@ -8,11 +17,6 @@
   <DT>02 фев:  <DD><a href="/catalog/cat410.shtml" title="Новые товары:&#xa;Свёрла по металлу ступенчатые (шаговые) РОСОМАХА,&#xa;4 - 40 мм, 5 - 19 ступеней"><span class="title">Свёрла</span><span class="dop"> ступенчатые</span></a><br>
   <DT>01 фев:  <DD><a href="/catalog/cat545.shtml" title="Цены снижены и расширен ассортимент:&#xa;Круги абразивные самозакрепляющиеся без отверстий РОСОМАХА"><span class="title">Круги абразивные</span><span class="dop"> "самолипы"</span></a><br>
   <DT>31 янв:  <DD><a href="/catalog/cat188.shtml" title="Новые товары:&#xa;Степлер ручной металлический РОСОМАХА ПРОФИ&#xa;Скобы для степлера калёные, тип 53"><span class="title">Степлер мебельный и скобы</span><span class="dop"></span></a><br>
-  <DT>29 ноя:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор У-2К (зеленый)"><span class="title">Респиратор</span><span class="dop"> У-2К</span></a><br>
-  <DT>22 ноя:  <DD><a href="/catalog/cat295.shtml" title="Цены снижены:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл.&#xa;Разные цвета"><span class="title">Аэрозольные краски</span><span class="dop"> ULTIMA</span></a><br>
-  <DT>21 ноя:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>10 сен:  <DD><a href="/catalog/cat176.shtml" title="Цены снижены:&#xa;Силикон строительный универсальный ULTIMA, 280 мл;&#xa;Силикон санитарный универсальный ULTIMA, 280 мл.&#xa;Цвета: белый, бесцветный"><span class="title">Силикон</span><span class="dop"> ULTIMA, 280 мл</span></a><br>
-  <DT>08 сен:  <DD><a href="/catalog/cat86.shtml"  title="Цена снижена: Перчатки Х/Б с двойным   латексным покрытием ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -32,10 +36,20 @@
       <td align="center" width=1><a class="cboxElement"
         href="/img/pic/foam/big/SPTG65w.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл">
         <img src="/img/pic/foam/small/SPTG65ww.png" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat175.shtml"
+      <td class="good-txt"><a href="/catalog/cat28.shtml"
         title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл&#xa;на нашем сайте">
         <p>
           <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
           <span class="addt"> 875 мл</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/abraz/big/101125.png" title="Большое фото:&#xa;Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез">
+        <img src="/img/pic/abraz/small/101125.png" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat28.shtml"
+        title="Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез&#xa;на нашем сайте">
+        <p>
+          <span class="title">Диски алмазные</span><span class="dop"><br>РОСОМАХА</span>
         </p></a></td></table>
 </div>
