--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -2,7 +2,12 @@
   <h2>Новинки</h2><DL>
   <!-- ^ 2022 ^ -->
   <!-- ^ 2021 ^ -->
+  <DT>29 ноя:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор У-2К (зеленый)"><span class="title">Респиратор</span><span class="dop"> У-2К</span></a><br>
+  <DT>22 ноя:  <DD><a href="/catalog/cat295.shtml" title="Цены снижены:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл.&#xa;Разные цвета"><span class="title">Аэрозольные краски</span><span class="dop"> ULTIMA</span></a><br>
+  <DT>21 ноя:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>10 сен:  <DD><a href="/catalog/cat176.shtml" title="Цены снижены:&#xa;Силикон строительный универсальный ULTIMA, 280 мл;&#xa;Силикон санитарный универсальный ULTIMA, 280 мл.&#xa;Цвета: белый, бесцветный"><span class="title">Силикон</span><span class="dop"> ULTIMA, 280 мл</span></a><br>
   <DT>09 сен:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор технический KN95 с клапаном"><span class="title">Респиратор технический</span><span class="dop"> KN95</span></a><br>
+  <DT>08 сен:  <DD><a href="/catalog/cat86.shtml"  title="Цена снижена: Перчатки Х/Б с двойным   латексным покрытием ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
   <DT>02 сен:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span></a><br>
   <DT>01 сен:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
