--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,22 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 июн:  <DD><a href="/catalog/cat295.shtml" title="Новый ассортимент:&#xa;Эмаль акриловая аэрозольная&#xa;'РемоКолор Professional', 520 мл - различные цвета"><span class="title">Аэрозольные краски</span></a><br>
+  <DT>14 июн:  <DD><a href="/catalog/cat175.shtml" title="Новый ассортимент:&#xa;Пена монтажная 'SOUDAL'&#xa;ручная/пистолетная/огнестойкая"><span class="title">Монтажная пена</span></a>, <a href="/catalog/cat176.shtml" title="Новый ассортимент:&#xa;Силикон строительный универсальный белый/прозрачный&#xa;'Profil', 280 мл"><span class="title">герметики</span></a><br>
+  <DT>14 июн:  <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы</span><span class="dop"> по дереву</span></a><br>
+  <DT>14 июн:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>15 апр:  <DD><a href="/catalog/cat535.shtml" title="Новые товары:&#xa;Кисти плоские флейцевые КФ,&#xa;искусственное расщепленное волокно Канекарон,&#xa;1 - 4 &Prime;"><span class="title">Кисти плоские КФ</span><span class="dop"> Канекарон</span></a><br>
+  <DT>14 апр:  <DD><a href="/catalog/cat49.shtml"  title="Новые товары:&#xa;Зубила плоские для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Новые товары:&#xa;Пики для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">пики</span></a><span class="dop"> SDS Max, SDS+</span><br>
   <DT>11 апр:  <DD><a href="/catalog/cat47.shtml"  title="Новые товары:&#xa;Буры по бетону для перфоратора SDS plus RennBohr Duo"><span class="title">Буры SDS+</span><span class="dop"> RennBohr Duo</span></a><br>
-  <DT>02 мар:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"></span></a><br>
-  <DT>01 мар:  <DD><a href="/catalog/cat155.shtml" title="Цены снижены"><span class="title">Гладилки штукатурные</span><span class="dop"></span></a><br>
-  <DT>25 фев:  <DD><a href="/catalog/cat149.shtml" title="Цены снижены"><span class="title">Кисти круглые</span><span class="dop"></span></a><br>
-  <DT>24 фев:  <DD><a href="/catalog/cat83.shtml"  title="Цены снижены"><span class="title">Ключи разводные</span><span class="dop"></span></a><br>
-  <DT>22 фев:  <DD><a href="/catalog/cat588.shtml" title="Цены снижены"><span class="title">Скотч лента малярная</span><span class="dop"></span></a><br>
-  <DT>21 фев:  <DD><a href="/catalog/cat72.shtml"  title="Цены снижены"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
-  <DT>15 фев:  <DD><a href="/catalog/cat562.shtml" title="Цены снижены"><span class="title">Замки навесные</span><span class="dop"></span></a><br>
-  <DT>14 фев:  <DD><a href="/catalog/cat33.shtml"  title="Цены снижены: Гайки оцинкованные ГОСТ 5915-70"><span class="title">Гайки</span><span class="dop"></span></a> и <a href="/catalog/cat34.shtml"  title="Цены снижены: Шайбы плоские ГОСТ 11371-70 и увеличеннне ГОСТ 6958-70"><span class="title">шайбы</span><span class="dop"></span></a><br>
-  <DT>12 фев:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
-  <DT>08 фев:  <DD><a href="/catalog/cat172.shtml" title="Расширен ассортимент:&#xa;Коронки по бетону алмазные в сборе, с хвостовиком SDS+"><span class="title">Коронки по бетону алмазные</span><span class="dop"></span></a><br>
-  <DT>07 фев:  <DD><a href="/catalog/cat281.shtml" title="Новые товары: Коронки HSS BIMETAL, РОСОМАХА&#xa;Цены снижены: Хвостовики (держатели) для коронок BIMETAL, HARDAX"><span class="title">Коронки BIMETAL и хвостовики</span><span class="dop"></span></a><br>
-  <DT>04 фев:  <DD><a href="/catalog/cat18.shtml"  title="Цены снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
-  <DT>03 фев:  <DD><a href="/catalog/cat189.shtml" title="Новый товар:&#xa;Чашка алмазная зачистная двухрядная 125 мм РОСОМАХА"><span class="title">Чашка алмазная зачистная</span><span class="dop"></span></a><br>
-  <DT>02 фев:  <DD><a href="/catalog/cat410.shtml" title="Новые товары:&#xa;Свёрла по металлу ступенчатые (шаговые) РОСОМАХА,&#xa;4 - 40 мм, 5 - 19 ступеней"><span class="title">Свёрла</span><span class="dop"> ступенчатые</span></a><br>
-  <DT>01 фев:  <DD><a href="/catalog/cat545.shtml" title="Цены снижены и расширен ассортимент:&#xa;Круги абразивные самозакрепляющиеся без отверстий РОСОМАХА"><span class="title">Круги абразивные</span><span class="dop"> "самолипы"</span></a><br>
-  <DT>31 янв:  <DD><a href="/catalog/cat188.shtml" title="Новые товары:&#xa;Степлер ручной металлический РОСОМАХА ПРОФИ&#xa;Скобы для степлера калёные, тип 53"><span class="title">Степлер мебельный и скобы</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
