--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,22 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <!-- ^ 2022 ^ -->
+  <DT>02 мар:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"></span></a><br>
+  <DT>01 мар:  <DD><a href="/catalog/cat155.shtml" title="Цены снижены"><span class="title">Гладилки штукатурные</span><span class="dop"></span></a><br>
+  <DT>25 фев:  <DD><a href="/catalog/cat149.shtml" title="Цены снижены"><span class="title">Кисти круглые</span><span class="dop"></span></a><br>
+  <DT>24 фев:  <DD><a href="/catalog/cat83.shtml"  title="Цены снижены"><span class="title">Ключи разводные</span><span class="dop"></span></a><br>
+  <DT>22 фев:  <DD><a href="/catalog/cat588.shtml" title="Цены снижены"><span class="title">Скотч лента малярная</span><span class="dop"></span></a><br>
+  <DT>21 фев:  <DD><a href="/catalog/cat72.shtml"  title="Цены снижены"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
+  <DT>15 фев:  <DD><a href="/catalog/cat562.shtml" title="Цены снижены"><span class="title">Замки навесные</span><span class="dop"></span></a><br>
+  <DT>14 фев:  <DD><a href="/catalog/cat33.shtml"  title="Цены снижены: Гайки оцинкованные ГОСТ 5915-70"><span class="title">Гайки</span><span class="dop"></span></a> и <a href="/catalog/cat34.shtml"  title="Цены снижены: Шайбы плоские ГОСТ 11371-70 и увеличеннне ГОСТ 6958-70"><span class="title">шайбы</span><span class="dop"></span></a><br>
+  <DT>12 фев:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
+  <DT>08 фев:  <DD><a href="/catalog/cat172.shtml" title="Расширен ассортимент:&#xa;Коронки по бетону алмазные в сборе, с хвостовиком SDS+"><span class="title">Коронки по бетону алмазные</span><span class="dop"></span></a><br>
+  <DT>07 фев:  <DD><a href="/catalog/cat281.shtml" title="Новые товары: Коронки HSS BIMETAL, РОСОМАХА&#xa;Цены снижены: Хвостовики (держатели) для коронок BIMETAL, HARDAX"><span class="title">Коронки BIMETAL и хвостовики</span><span class="dop"></span></a><br>
+  <DT>04 фев:  <DD><a href="/catalog/cat18.shtml"  title="Цены снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
+  <DT>03 фев:  <DD><a href="/catalog/cat189.shtml" title="Новый товар:&#xa;Чашка алмазная зачистная двухрядная 125 мм РОСОМАХА"><span class="title">Чашка алмазная зачистная</span><span class="dop"></span></a><br>
+  <DT>02 фев:  <DD><a href="/catalog/cat410.shtml" title="Новые товары:&#xa;Свёрла по металлу ступенчатые (шаговые) РОСОМАХА,&#xa;4 - 40 мм, 5 - 19 ступеней"><span class="title">Свёрла</span><span class="dop"> ступенчатые</span></a><br>
+  <DT>01 фев:  <DD><a href="/catalog/cat545.shtml" title="Цены снижены и расширен ассортимент:&#xa;Круги абразивные самозакрепляющиеся без отверстий РОСОМАХА"><span class="title">Круги абразивные</span><span class="dop"> "самолипы"</span></a><br>
+  <DT>31 янв:  <DD><a href="/catalog/cat188.shtml" title="Новые товары:&#xa;Степлер ручной металлический РОСОМАХА ПРОФИ&#xa;Скобы для степлера калёные, тип 53"><span class="title">Степлер мебельный и скобы</span><span class="dop"></span></a><br>
   <!-- ^ 2021 ^ -->
   <DT>29 ноя:  <DD><a href="/catalog/cat92.shtml"  title="Цена снижена: Респиратор У-2К (зеленый)"><span class="title">Респиратор</span><span class="dop"> У-2К</span></a><br>
   <DT>22 ноя:  <DD><a href="/catalog/cat295.shtml" title="Цены снижены:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл.&#xa;Разные цвета"><span class="title">Аэрозольные краски</span><span class="dop"> ULTIMA</span></a><br>
