Many files + "ООО" -> "Newe.ru" + load files moved to "main"

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <!-- ^ 2022 ^ -->
+  <DT>15 апр:  <DD><a href="/catalog/cat535.shtml" title="Новые товары:&#xa;Кисти плоские флейцевые КФ,&#xa;искусственное расщепленное волокно Канекарон,&#xa;1 - 4 &Prime;"><span class="title">Кисти плоские КФ</span><span class="dop"> Канекарон</span></a><br>
+  <DT>14 апр:  <DD><a href="/catalog/cat49.shtml"  title="Новые товары:&#xa;Зубила плоские для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Новые товары:&#xa;Пики для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">пики</span></a><span class="dop"> SDS Max, SDS+</span><br>
+  <DT>11 апр:  <DD><a href="/catalog/cat47.shtml"  title="Новые товары:&#xa;Буры по бетону для перфоратора SDS plus RennBohr Duo"><span class="title">Буры SDS+</span><span class="dop"> RennBohr Duo</span></a><br>
   <DT>02 мар:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"></span></a><br>
   <DT>01 мар:  <DD><a href="/catalog/cat155.shtml" title="Цены снижены"><span class="title">Гладилки штукатурные</span><span class="dop"></span></a><br>
   <DT>25 фев:  <DD><a href="/catalog/cat149.shtml" title="Цены снижены"><span class="title">Кисти круглые</span><span class="dop"></span></a><br>
