--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,8 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 авг : <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>26 июл:  <DD><a href="/catalog/cat184.shtml" title="Снова в продаже: Круги отрезные по металлу BERGEN"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
   <DT>04 июл:  <DD><a href="/catalog/cat105.shtml" title="Снова в продаже: Тачки строительные одно- и двухколёсные"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>02 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены снижены: Шпильки резьбовые оцинкованные, DIN 975&#xa;Длина 1 и 2 метра, разные диаметры"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
-  <DT>02 июл:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>29 июн:  <DD><a href="/catalog/cat191.shtml" title="Обновлен ассортимент:&#xa;Пистолеты для монтажной пены 'РемоКолор'"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
   <DT>28 июн:  <DD><a href="/catalog/cat144.shtml" title="Обновлен ассортимент:&#xa;Валики и мини-ролики малярные 'Велюр'&#xa;на рукоятке 6 мм и сменные"><span class="title">Валики малярные</span><span class="dop"> "Велюр"</span></a><br>
   <DT>28 июн:  <DD><a href="/catalog/cat212.shtml" title="Новый товар:&#xa;Мерные ленты геодезические&#xa;длиной 30 и 50 м, в открытом пластиковом корпусе"><span class="title">Мерные ленты</span><span class="dop"> геодезические</span></a><br>
