--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -91,6 +91,7 @@
 <br>Основной ассортимент красок и колеров представлен <a href="/catalog/cat304.shtml">здесь</a>.
 
 ============================== Settings.nds_info ==============================
+<span class="nds">Все цены указаны с учетом НДС.</span>
 <span class="nds">Все цены указаны с учетом НДС и актуальны на {DATE}.</span>
 <span class="q"><br>Количество товара на складе уточняйте у менеджера.</span>
 <br><span class="p2"><br><b>Оптовая цена</b> действует при сумме счета от <b>20 тысяч</b> рублей.
