--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>31 окт : <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Полиуретановый клей-пена пистолетная&#xa;Soudabond EasyGun 750 мл всесезонная"><span class="title">Монтажный клей-пена</span><span class="dop"> EasyGun</span></a><br>
+  <DT>28 окт : <DD><a href="/catalog/cat86.shtml"  title="Расширен ассортимент:&#xa;Перчатки Х/Б с ПВХ покрытием&#xa;4-х нитка 7.5 класс &laquo;Протектор&raquo;"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
+  <DT>09 авг : <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
+  <DT>09 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>05 авг : <DD><a href="/catalog/cat302.shtml" title="Снова в продаже: Бучарда SDS Max 40 х 40 х 250 мм, 16 зубьев"><span class="title">Бучарда</span><span class="dop"> SDS Max</span></a><br>
   <DT>01 авг : <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>26 июл:  <DD><a href="/catalog/cat184.shtml" title="Снова в продаже: Круги отрезные по металлу BERGEN"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
   <DT>04 июл:  <DD><a href="/catalog/cat105.shtml" title="Снова в продаже: Тачки строительные одно- и двухколёсные"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
@@ -34,7 +39,7 @@
       <td align="center" width=1><a class="cboxElement"
         href="/img/pic/foam/big/SPTG65w.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл">
         <img src="/img/pic/foam/small/SPTG65ww.png" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat28.shtml"
+      <td class="good-txt"><a href="/catalog/cat175.shtml"
         title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл&#xa;на нашем сайте">
         <p>
           <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
